[package]
name = "sagakar-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Adapted from the GGEZ template at https://github.com/IndaPlus23/Turbofishes/tree/master/chess-gui/chess-gui-templates/ggez-template
[dependencies]
sagakar_chess_lib = { git = "https://github.com/IndaPlus23/sagakar-chess-lib.git" } # Replace this with the library you want to use
linked-hash-map = "0.5.4" 
ggez = "0.6.1"